# myhome-jarvis

./: .env.example  .gitignore  Cargo.toml  README.md  go.mod  traceability.json
.githooks/: pre-commit
.mhj/: context-pack.json
contracts/: local-finance-evidence.json  local-finance-readiness.json  shorts-factory.json
crates/mhj-storage/: Cargo.toml
crates/mhj-storage/src/: batch_error.rs  columns.rs  commerce_batch.rs  commerce_columns.rs  commerce_schema.rs  constants.rs  curated_meta.rs  curated_read.rs  curated_write.rs  dataset.rs  error.rs  finance_batch.rs  finance_columns.rs  finance_schema.rs  format.rs  layer.rs  lib.rs  manifest.rs  parquet_writer.rs  parse.rs  partition.rs  path_rules.rs  picked_columns.rs  raw.rs  records.rs  reports.rs  validate_commerce.rs  validate_common.rs  validate_finance.rs
crates/mhj-storage/tests/: curated_commerce.rs  curated_finance.rs  curated_rejections.rs  manifest.rs  partition.rs  raw_writer.rs
crates/mhj-storage/tests/common/: mod.rs
docs/: agent-cluster.md  architecture.md  assistant-authority-profiles.md  assistant-vision.md  authority-gate.md  backlog.md  ci.md  closed-loop.md  code-shape-budget.md  codex-cost-governor.md  codex-sustainability.md  command-audit.md  commerce-domain.md  confidence-assessor.md  connectors.md  context-pack.md  control-plane-manifest.md  daemon-observability.md  ddd.md  evidence-graph.md  evidence-quality.md  external-evidence.md  finance-consent.md  finance-domain.md  flutter-navigation-chrome-decision.md  flutter-screen-contracts.md  flutter.md  (+31 more)
docs-src/: shorts-factory.json
(+1711 files in other folders)
