[package]
name = "mhj-storage"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
arrow-array = "59"
arrow-schema = "59"
parquet = { version = "59", default-features = false, features = ["arrow", "zstd"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
